# drill

./: .gitignore  .golangci.yml  .goreleaser.yml  Cargo.toml  Dockerfile  Makefile  Makefile.cross-compiles  README.md  docker-compose.yml  go.mod  go.sum  main.go  package.sh
.github/workflows/: golangci-lint.yml  goreleaser.yml  publish-ghcr.yml  release.yml
assets/: assets.go
assets/drillc/: efs.go
assets/drills/: efs.go
client/: admin_api.go  connector.go  control.go  service.go
client/event/: event.go
client/health/: health.go
client/proxy/: general_tcp.go  proxy.go  proxy_manager.go  proxy_wrapper.go  sudp.go  udp.go  xtcp.go
client/visitor/: stcp.go  sudp.go  visitor.go  visitor_manager.go  xtcp.go
cmd/: agent.go  root.go  server.go
cmd/cli/: agent.go  root.go  server.go
cmd/drill/: main.go
cmd/drill-server/: main.go  wire.go  wire_gen.go
cmd/drillc/: main.go
cmd/drills/: main.go  root.go  verify.go
configs/: agent.yaml  server.yaml  tenants.sample.json
container-config/: drill-server.yaml
deploy/: drill.service  install_server.sh
internal/agent/: agent.go
internal/client/: client.go
internal/server/: binds.go  certmagicx.go  http.go  manager.go  options.go  render.go  server.go  sni_tcp.go  ssh.go  tcpudp.go  tunnel.go
internal/version/: version.go
pkg/auth/: auth.go  oidc.go  pass.go  token.go
pkg/config/: flags.go  load.go  template.go
pkg/metrics/: metrics.go
pkg/msg/: ctl.go
pkg/proto/: proto.go  (+1 more)
server/: control.go  dashboard_api.go  service.go
src/: auth.rs  client.rs  lib.rs  main.rs  server.rs  shared.rs
(+112 files in other folders)
